gitops/platform/immich/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`immich.__ZONE_NAME__`)
      services:
        - kind: Service
          name: immich-server
          port: 2283
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-wiredoor
  namespace: immich
spec:
  entryPoints:
    - webwiredoor
  routes:
    - kind: Rule
      match: Host(`immich.__ZONE_NAME__`)
      services:
        - kind: Service
          name: immich-server
          port: 2283
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-tailscale
  namespace: immich
spec:
  entryPoints:
    - webtailscale
  routes:
    - kind: Rule
      match: Host(`immich.__ZONE_NAME__`)
      services:
        - kind: Service
          name: immich-server
          port: 2283
  tls: {}
